spacing issues and colors

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -29,12 +29,12 @@
   div.row.menu {
     width:100%;
     height:120px;
-    background-color: rgba(255, 255, 255, .05);
+    background-color: rgba(56, 197, 243, .75);
     position:fixed;
+    margin-top:-1.8em;
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
-    margin-top:-1.8em;
   }
   li.plank{
     line-height:60px;
